--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ignore-pattern '.storybook' --fix --ext ts,tsx --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@aws-amplify/ui-react": "^6.1.12",
+    "@tanstack/react-query": "^5.45.1",
+    "amplify": "^0.0.11",
     "antd": "^5.17.4",
+    "aws-amplify": "^6.3.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -26,9 +30,13 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.6.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.13.1",
     "vite": "^5.2.0"
   }
 }
