--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "amplify": "^0.0.11",
     "antd": "^5.17.4",
     "aws-amplify": "^6.3.7",
+    "date-fns": "^3.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
