--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -10,7 +10,7 @@ projects:
     extensions:
       amplify:
         codeGenTarget: typescript
-        generatedFileName: src/API.ts
+        generatedFileName: src/api/graphql/API.ts
         docsFilePath: src/graphql
         region: ap-southeast-1
         apiId: null
