--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.6.0",
+    "prettier": "^3.3.2",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.1",
     "vite": "^5.2.0"
