--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -203,6 +203,29 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
+    "bookingExpiryAndTimeSlotUpdater": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput",
+            "GraphQLAPIKeyOutput"
+          ],
+          "category": "api",
+          "resourceName": "pawkit"
+        },
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "pawkit"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "dataLoader": {
       "build": true,
       "dependsOn": [
@@ -319,6 +342,22 @@
         {
           "category": "function",
           "resourceName": "AdminQueries2bb3090c"
+        }
+      ]
+    },
+    "AMPLIFY_function_bookingExpiryAndTimeSlotUpdater_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "bookingExpiryAndTimeSlotUpdater"
+        }
+      ]
+    },
+    "AMPLIFY_function_bookingExpiryAndTimeSlotUpdater_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "bookingExpiryAndTimeSlotUpdater"
         }
       ]
     },
@@ -477,17 +516,7 @@
   },
   "storage": {
     "content": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "Name",
-            "Arn",
-            "LambdaExecutionRole"
-          ],
-          "category": "function",
-          "resourceName": "dataLoader"
-        }
-      ],
+      "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "S3"
     }
