Remove refund handling

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -457,6 +457,14 @@
         }
       ]
     },
+    "AMPLIFY_function_paymentConfirmation_hitpayEndpoint": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "paymentConfirmation"
+        }
+      ]
+    },
     "AMPLIFY_function_paymentConfirmation_s3Key": {
       "usedBy": [
         {
